--- a/public/index.html
+++ b/public/index.html
@@ -40,4 +40,6 @@
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
   </body>
+    <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
+    <script src="js/index.js"></script>
 </html>
